--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "core-util-is": "^1.0.2",
     "dotenv": "^8.0.0",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "node-spotify-api": "^1.1.1"
   }
 }
